name:               Calculator
version:            0.1
build-type:         Simple
cabal-version:      >= 1.10

executable Calculator
  build-depends:    base,
                    containers,
                    mtl,
                    HUnit
  main-is:          Calculator.lhs
  default-language: Haskell2010
